--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img src="img/explore-nature.jpg" alt="explore-nature">
                 <div class="data-block-4">
                     <p>Explore nature</p>
-                    <h2>LONG WALKS AND MUCH MORE</h2>
+                    <h2>LONG WALKS AND<br> MUCH MORE...</h2>
                 </div>
             </div>
            </div>
